--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <link rel="stylesheet" href="style.css"> <!-- For .view-hidden, .view-active -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
-        /* Base structural style for category filter buttons, colors/active state handled by JS */
-        .category-filter-btn {
-            @apply px-4 py-2 text-sm font-medium rounded-md transition-colors duration-150 ease-in-out whitespace-nowrap;
-        }
         body {
             font-family: 'Inter', sans-serif;
             background-color: #f4f7f9; 
+        }
+        .category-filter-btn {
+            @apply px-4 py-2 text-sm font-medium rounded-md transition-colors duration-150 ease-in-out whitespace-nowrap;
         }
         #categoryFilterBar::-webkit-scrollbar { height: 4px; }
         #categoryFilterBar::-webkit-scrollbar-track { background: transparent; }
@@ -38,7 +37,19 @@
                         </div>
                         <input id="headerSearchInput" name="search" class="block w-full bg-indigo-400 bg-opacity-25 text-white placeholder-indigo-100 border border-transparent rounded-md py-2 pl-10 pr-3 leading-5 focus:outline-none focus:bg-white focus:text-gray-900 focus:placeholder-gray-500 focus:ring-0 focus:border-transparent sm:text-sm transition-colors" placeholder="Search" type="search">
                     </div>
-                    <p id="authStatus" class="text-sm opacity-90 whitespace-nowrap">Initializing...</p>
+                    <!-- MODIFIED: Auth Status Area -->
+                    <div id="authContainer" class="text-sm">
+                        <p id="authStatus" class="opacity-90 whitespace-nowrap">Initializing...</p>
+                        <button id="googleSignInBtn" class="hidden ml-4 px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-indigo-700 bg-white hover:bg-indigo-50 transition-colors">
+                            Sign in with Google
+                        </button>
+                        <div id="userInfo" class="hidden items-center">
+                            <span id="userName" class="mr-3 opacity-90"></span>
+                            <button id="signOutBtn" class="px-3 py-1.5 border border-transparent text-xs font-medium rounded-md text-indigo-200 bg-white bg-opacity-20 hover:bg-opacity-30 transition-colors">
+                                Sign Out
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -72,14 +83,14 @@
 
                 <div id="categoryFilterBar" class="mb-8 overflow-x-auto pb-3">
                     <div class="flex space-x-3 sm:space-x-4 border-b border-slate-300 pb-3">
-                        <button data-category="all" class="category-filter-btn px-4 py-2 text-sm font-medium rounded-md transition-colors duration-150 ease-in-out whitespace-nowrap text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">All Recipes</button>
-                        <button data-category="Salad" class="category-filter-btn px-4 py-2 text-sm font-medium rounded-md transition-colors duration-150 ease-in-out whitespace-nowrap text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Salads</button>
-                        <button data-category="Main Course" class="category-filter-btn px-4 py-2 text-sm font-medium rounded-md transition-colors duration-150 ease-in-out whitespace-nowrap text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Main Courses</button>
-                        <button data-category="Dessert" class="category-filter-btn px-4 py-2 text-sm font-medium rounded-md transition-colors duration-150 ease-in-out whitespace-nowrap text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Desserts</button>
-                        <button data-category="Appetizer" class="category-filter-btn px-4 py-2 text-sm font-medium rounded-md transition-colors duration-150 ease-in-out whitespace-nowrap text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Appetizers</button>
-                        <button data-category="Drink" class="category-filter-btn px-4 py-2 text-sm font-medium rounded-md transition-colors duration-150 ease-in-out whitespace-nowrap text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Drinks</button>
-                        <button data-category="Breakfast" class="category-filter-btn px-4 py-2 text-sm font-medium rounded-md transition-colors duration-150 ease-in-out whitespace-nowrap text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Breakfast</button>
-                        <button data-category="Other" class="category-filter-btn px-4 py-2 text-sm font-medium rounded-md transition-colors duration-150 ease-in-out whitespace-nowrap text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Other</button>
+                        <button data-category="all" class="category-filter-btn text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">All Recipes</button>
+                        <button data-category="Salad" class="category-filter-btn text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Salads</button>
+                        <button data-category="Main Course" class="category-filter-btn text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Main Courses</button>
+                        <button data-category="Dessert" class="category-filter-btn text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Desserts</button>
+                        <button data-category="Appetizer" class="category-filter-btn text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Appetizers</button>
+                        <button data-category="Drink" class="category-filter-btn text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Drinks</button>
+                        <button data-category="Breakfast" class="category-filter-btn text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Breakfast</button>
+                        <button data-category="Other" class="category-filter-btn text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Other</button>
                     </div>
                 </div>
 
@@ -90,7 +101,8 @@
         </div> 
 
         <div id="recipeDetailView" class="view-hidden">
-            <section id="singleRecipeSection" class="bg-white p-6 md:p-8 rounded-xl shadow-xl mt-0 md:mt-8 max-w-3xl mx-auto">
+            <!-- ... (Recipe Detail View content remains the same as before) ... -->
+             <section id="singleRecipeSection" class="bg-white p-6 md:p-8 rounded-xl shadow-xl mt-0 md:mt-8 max-w-3xl mx-auto">
                 <button id="navigateToBrowseBtnDetail" class="mb-6 text-indigo-600 hover:text-indigo-800 font-semibold inline-flex items-center">
                     <svg class="h-5 w-5 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true"><path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" /></svg>
                     Back to All Recipes
@@ -132,7 +144,8 @@
         </div> 
 
         <div id="recipeFormView" class="view-hidden">
-            <section id="addEditRecipeSection" class="mb-10 bg-white p-6 md:p-8 rounded-xl shadow-xl mt-0 md:mt-8 max-w-2xl mx-auto">
+             <!-- ... (Recipe Form View content remains the same, including image upload field) ... -->
+             <section id="addEditRecipeSection" class="mb-10 bg-white p-6 md:p-8 rounded-xl shadow-xl mt-0 md:mt-8 max-w-2xl mx-auto">
                 <div class="flex justify-between items-center mb-8"> 
                     <h2 id="formTitle" class="text-2xl md:text-3xl font-bold text-gray-800">Add New Recipe</h2>
                 </div>
@@ -155,8 +168,6 @@
                             <option value="Other">Other</option>
                         </select>
                     </div>
-
-                    <!-- NEW: Image Upload Field and Preview -->
                     <div>
                         <label for="recipeImageInput" class="block text-sm font-semibold text-gray-700 mb-2">Recipe Image (Optional)</label>
                         <input type="file" id="recipeImageInput" name="recipeImage" accept="image/jpeg, image/png, image/webp"
@@ -171,8 +182,6 @@
                             <button type="button" id="removeImageBtn" class="mt-2 text-xs text-red-600 hover:text-red-800 underline">Remove Image</button>
                         </div>
                     </div>
-                    <!-- End of Image Upload Field -->
-                    
                     <div>
                         <label class="block text-sm font-semibold text-gray-700 mb-2">Ingredients <span class="text-red-500">*</span></label>
                         <div class="flex items-center space-x-2 mb-3">
@@ -197,7 +206,10 @@
                     <input type="hidden" id="recipeIdInput">
                     <div class="mt-8 pt-6 border-t border-gray-200 flex flex-col-reverse md:flex-row md:justify-end md:space-x-3 space-y-3 space-y-reverse md:space-y-0">
                         <button id="navigateToBrowseBtnForm" type="button" class="w-full md:w-auto justify-center rounded-lg border border-gray-300 bg-white px-4 py-3 text-sm font-semibold text-gray-700 shadow-sm hover:bg-gray-50 transition-colors">Cancel</button>
-                        <button type="submit" id="saveRecipeBtn" class="btn-primary">Save Recipe</button>
+                        <button type="submit" id="saveRecipeBtn" 
+                                class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-lg shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-colors whitespace-nowrap w-full md:w-auto">
+                                Save Recipe
+                        </button>
                     </div>
                 </form>
             </section>
