--- a/index.html
+++ b/index.html
@@ -39,13 +39,16 @@
                     </div>
                     <!-- MODIFIED: Auth Status Area -->
                     <div id="authContainer" class="text-sm">
-                        <p id="authStatus" class="opacity-90 whitespace-nowrap">Initializing...</p>
-                        <button id="googleSignInBtn" class="hidden ml-4 px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-indigo-700 bg-white hover:bg-indigo-50 transition-colors">
+                        <p id="authStatus" class="opacity-90 whitespace-nowrap hidden">Initializing...</p> <!-- Initially hidden, JS will show if needed -->
+                        <button id="googleSignInBtn" 
+                                class="hidden ml-0 sm:ml-4 px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-indigo-700 bg-white hover:bg-indigo-50 transition-colors">
                             Sign in with Google
                         </button>
-                        <div id="userInfo" class="hidden items-center">
-                            <span id="userName" class="mr-3 opacity-90"></span>
-                            <button id="signOutBtn" class="px-3 py-1.5 border border-transparent text-xs font-medium rounded-md text-indigo-200 bg-white bg-opacity-20 hover:bg-opacity-30 transition-colors">
+                        <div id="userInfo" class="hidden items-center space-x-3">
+                            <span id="userName" class="font-medium text-indigo-100"></span>
+                            {/* MODIFIED: Sign Out Button Styling */}
+                            <button id="signOutBtn" 
+                                    class="px-3 py-1.5 border border-indigo-400 text-xs font-medium rounded-md text-indigo-100 hover:bg-white hover:text-indigo-700 hover:border-transparent transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-600 focus:ring-white">
                                 Sign Out
                             </button>
                         </div>
@@ -55,6 +58,7 @@
         </div>
     </header>
 
+    <!-- ... (rest of your HTML: loadingIndicator, messageBanners, main#appViews, footer, script tags) ... -->
     <div id="loadingIndicator" class="hidden fixed top-0 left-0 w-full h-1 bg-yellow-400 z-50"></div>
     <div id="successMessage" class="hidden p-3 text-sm text-white bg-green-500 rounded-lg fixed top-24 right-5 z-50 shadow-lg" role="alert"></div> 
     <div id="errorMessage" class="hidden p-3 text-sm text-white bg-red-500 rounded-lg fixed top-24 right-5 z-50 shadow-lg" role="alert"></div>
@@ -101,8 +105,7 @@
         </div> 
 
         <div id="recipeDetailView" class="view-hidden">
-            <!-- ... (Recipe Detail View content remains the same as before) ... -->
-             <section id="singleRecipeSection" class="bg-white p-6 md:p-8 rounded-xl shadow-xl mt-0 md:mt-8 max-w-3xl mx-auto">
+            <section id="singleRecipeSection" class="bg-white p-6 md:p-8 rounded-xl shadow-xl mt-0 md:mt-8 max-w-3xl mx-auto">
                 <button id="navigateToBrowseBtnDetail" class="mb-6 text-indigo-600 hover:text-indigo-800 font-semibold inline-flex items-center">
                     <svg class="h-5 w-5 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true"><path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" /></svg>
                     Back to All Recipes
@@ -144,8 +147,7 @@
         </div> 
 
         <div id="recipeFormView" class="view-hidden">
-             <!-- ... (Recipe Form View content remains the same, including image upload field) ... -->
-             <section id="addEditRecipeSection" class="mb-10 bg-white p-6 md:p-8 rounded-xl shadow-xl mt-0 md:mt-8 max-w-2xl mx-auto">
+            <section id="addEditRecipeSection" class="mb-10 bg-white p-6 md:p-8 rounded-xl shadow-xl mt-0 md:mt-8 max-w-2xl mx-auto">
                 <div class="flex justify-between items-center mb-8"> 
                     <h2 id="formTitle" class="text-2xl md:text-3xl font-bold text-gray-800">Add New Recipe</h2>
                 </div>
