--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             font-family: 'Inter', sans-serif;
             background-color: #f4f7f9; 
         }
+        /* Base structural style for category filter buttons - JS will handle all visual styles */
         .category-filter-btn {
             @apply px-4 py-2 text-sm font-medium rounded-md transition-colors duration-150 ease-in-out whitespace-nowrap;
         }
@@ -37,18 +38,16 @@
                         </div>
                         <input id="headerSearchInput" name="search" class="block w-full bg-indigo-400 bg-opacity-25 text-white placeholder-indigo-100 border border-transparent rounded-md py-2 pl-10 pr-3 leading-5 focus:outline-none focus:bg-white focus:text-gray-900 focus:placeholder-gray-500 focus:ring-0 focus:border-transparent sm:text-sm transition-colors" placeholder="Search" type="search">
                     </div>
-                    <!-- MODIFIED: Auth Status Area -->
                     <div id="authContainer" class="text-sm">
-                        <p id="authStatus" class="opacity-90 whitespace-nowrap hidden">Initializing...</p> <!-- Initially hidden, JS will show if needed -->
+                        <p id="authStatus" class="opacity-90 whitespace-nowrap hidden">Initializing...</p>
                         <button id="googleSignInBtn" 
                                 class="hidden ml-0 sm:ml-4 px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-indigo-700 bg-white hover:bg-indigo-50 transition-colors">
                             Sign in with Google
                         </button>
                         <div id="userInfo" class="hidden items-center space-x-3">
                             <span id="userName" class="font-medium text-indigo-100"></span>
-                            {/* MODIFIED: Sign Out Button Styling */}
                             <button id="signOutBtn" 
-                                    class="px-3 py-1.5 border border-indigo-400 text-xs font-medium rounded-md text-indigo-100 hover:bg-white hover:text-indigo-700 hover:border-transparent transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-600 focus:ring-white">
+                                    class="px-3 py-1.5 border border-indigo-300 text-xs font-medium rounded-md text-indigo-100 bg-white bg-opacity-10 hover:bg-opacity-25 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white transition-colors">
                                 Sign Out
                             </button>
                         </div>
@@ -58,7 +57,6 @@
         </div>
     </header>
 
-    <!-- ... (rest of your HTML: loadingIndicator, messageBanners, main#appViews, footer, script tags) ... -->
     <div id="loadingIndicator" class="hidden fixed top-0 left-0 w-full h-1 bg-yellow-400 z-50"></div>
     <div id="successMessage" class="hidden p-3 text-sm text-white bg-green-500 rounded-lg fixed top-24 right-5 z-50 shadow-lg" role="alert"></div> 
     <div id="errorMessage" class="hidden p-3 text-sm text-white bg-red-500 rounded-lg fixed top-24 right-5 z-50 shadow-lg" role="alert"></div>
@@ -87,14 +85,16 @@
 
                 <div id="categoryFilterBar" class="mb-8 overflow-x-auto pb-3">
                     <div class="flex space-x-3 sm:space-x-4 border-b border-slate-300 pb-3">
-                        <button data-category="all" class="category-filter-btn text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">All Recipes</button>
-                        <button data-category="Salad" class="category-filter-btn text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Salads</button>
-                        <button data-category="Main Course" class="category-filter-btn text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Main Courses</button>
-                        <button data-category="Dessert" class="category-filter-btn text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Desserts</button>
-                        <button data-category="Appetizer" class="category-filter-btn text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Appetizers</button>
-                        <button data-category="Drink" class="category-filter-btn text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Drinks</button>
-                        <button data-category="Breakfast" class="category-filter-btn text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Breakfast</button>
-                        <button data-category="Other" class="category-filter-btn text-slate-700 bg-slate-200 hover:bg-indigo-100 hover:text-indigo-700">Other</button>
+                        <!-- Category buttons only need data-category and the base .category-filter-btn class -->
+                        <!-- All visual styles (active/inactive) will be managed by JavaScript -->
+                        <button data-category="all" class="category-filter-btn">All Recipes</button>
+                        <button data-category="Salad" class="category-filter-btn">Salads</button>
+                        <button data-category="Main Course" class="category-filter-btn">Main Courses</button>
+                        <button data-category="Dessert" class="category-filter-btn">Desserts</button>
+                        <button data-category="Appetizer" class="category-filter-btn">Appetizers</button>
+                        <button data-category="Drink" class="category-filter-btn">Drinks</button>
+                        <button data-category="Breakfast" class="category-filter-btn">Breakfast</button>
+                        <button data-category="Other" class="category-filter-btn">Other</button>
                     </div>
                 </div>
 
