--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
                         </button>
                         <div id="userInfo" class="hidden items-center space-x-3">
                             <span id="userName" class="font-medium text-indigo-100"></span>
+                            {/* MODIFIED: Sign Out Button with direct Tailwind classes */}
                             <button id="signOutBtn" 
-                                    class="px-3 py-1.5 border border-indigo-300 text-xs font-medium rounded-md text-indigo-100 bg-white bg-opacity-10 hover:bg-opacity-25 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white transition-colors">
+                                    class="px-3 py-1.5 border border-indigo-400 text-xs font-medium rounded-md text-indigo-100 bg-white bg-opacity-10 hover:bg-opacity-25 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white transition-colors">
                                 Sign Out
                             </button>
                         </div>
@@ -85,8 +86,8 @@
 
                 <div id="categoryFilterBar" class="mb-8 overflow-x-auto pb-3">
                     <div class="flex space-x-3 sm:space-x-4 border-b border-slate-300 pb-3">
-                        <!-- Category buttons only need data-category and the base .category-filter-btn class -->
-                        <!-- All visual styles (active/inactive) will be managed by JavaScript -->
+                        <!-- Buttons now only have data-category and the base .category-filter-btn class -->
+                        <!-- All visual styles (active/inactive) will be fully managed by JavaScript -->
                         <button data-category="all" class="category-filter-btn">All Recipes</button>
                         <button data-category="Salad" class="category-filter-btn">Salads</button>
                         <button data-category="Main Course" class="category-filter-btn">Main Courses</button>
