--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         }
         /* Base structural style for category filter buttons - JS will handle all visual styles */
         .category-filter-btn {
-            @apply px-4 py-2 text-sm font-medium rounded-md transition-colors duration-150 ease-in-out whitespace-nowrap cursor-pointer;
+    @apply px-4 py-2 text-sm font-medium rounded-md transition-colors duration-150 ease-in-out whitespace-nowrap cursor-pointer text-gray-600 hover:bg-gray-100; /* Base styles */
+        }
+        .active-category-btn {
+    @apply bg-indigo-600 text-white shadow-md; /* Active styles */
         }
         #categoryFilterBar::-webkit-scrollbar { height: 4px; }
         #categoryFilterBar::-webkit-scrollbar-track { background: transparent; }
@@ -47,8 +50,7 @@
                         <div id="userInfo" class="hidden items-center space-x-3">
                             <span id="userName" class="font-medium text-indigo-100"></span>
                             <button id="signOutBtn" 
-                                    class="px-3 py-1.5 border border-indigo-300 text-xs font-medium rounded-md text-indigo-100 bg-white bg-opacity-10 hover:bg-opacity-25 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white transition-colors">
-                                Sign Out
+                                px-3 py-1.5 border border-red-700 text-xs font-medium rounded-md text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white transition-colors whitespace-nowrap                                Sign Out
                             </button>
                         </div>
                     </div>
