--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     #categoryFilterBar::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
 
 </style>
+<link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=">
+</head>
 <header class="bg-gradient-to-r from-indigo-600 to-purple-600 text-white shadow-lg sticky top-0 z-40">
 
     <div class="container mx-auto px-4 sm:px-6 lg:px-8">
