--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
         font-family: 'Inter', sans-serif;
 
-        background-color: #f4f7f9; 
+        background-color: #FFF7ED; /* Equivalent to Tailwind bg-orange-50 */
+        color: #44403c; /* Equivalent to Tailwind text-stone-700 for base text */
 
     }
 
