--- a/index.html
+++ b/index.html
@@ -228,9 +228,13 @@
                     <input type="hidden" id="recipeIdInput">
                     <div class="mt-8 pt-6 border-t border-gray-200 flex flex-col-reverse md:flex-row md:justify-end md:space-x-3 space-y-3 space-y-reverse md:space-y-0">
                         <button id="navigateToBrowseBtnForm" type="button" class="w-full md:w-auto justify-center rounded-lg border border-gray-300 bg-white px-4 py-3 text-sm font-semibold text-gray-700 shadow-sm hover:bg-gray-50 transition-colors">Cancel</button>
-                        <button type="submit" id="saveRecipeBtn" 
-                                class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-lg shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-colors whitespace-nowrap w-full md:w-auto">
-                                Save Recipe
+                        <button type="submit" id="saveRecipeBtn"
+                            class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-lg shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-colors whitespace-nowrap w-full md:w-auto disabled:bg-indigo-400">
+                                <svg class="animate-spin -ml-1 mr-3 h-5 w-5 text-white hidden" id="saveBtnSpinner" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                                    <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+                                 </svg>
+                                <span id="saveBtnText">Save Recipe</span>
                         </button>
                     </div>
                 </form>
