--- a/index.html
+++ b/index.html
@@ -117,7 +117,39 @@
                 </div>
 
                 <div id="recipesGridContainer" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 lg:gap-8">
-                    <p id="recipesGridPlaceholder" class="text-center text-gray-500 py-8 col-span-full">Loading recipes...</p>
+                    <div id="recipesGridPlaceholder" class="col-span-full">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 lg:gap-8">
+        <div class="bg-white rounded-xl shadow-lg overflow-hidden">
+            <div class="h-48 w-full bg-slate-200 animate-pulse"></div>
+            <div class="p-5">
+                <div class="h-4 w-1/3 bg-slate-200 rounded animate-pulse mb-4"></div>
+                <div class="h-6 w-3/4 bg-slate-200 rounded animate-pulse"></div>
+            </div>
+        </div>
+        <div class="bg-white rounded-xl shadow-lg overflow-hidden">
+            <div class="h-48 w-full bg-slate-200 animate-pulse"></div>
+            <div class="p-5">
+                <div class="h-4 w-1/3 bg-slate-200 rounded animate-pulse mb-4"></div>
+                <div class="h-6 w-3/4 bg-slate-200 rounded animate-pulse"></div>
+            </div>
+        </div>
+        <div class="bg-white rounded-xl shadow-lg overflow-hidden">
+            <div class="h-48 w-full bg-slate-200 animate-pulse"></div>
+            <div class="p-5">
+                <div class="h-4 w-1/3 bg-slate-200 rounded animate-pulse mb-4"></div>
+                <div class="h-6 w-3/4 bg-slate-200 rounded animate-pulse"></div>
+            </div>
+        </div>
+        <div class="bg-white rounded-xl shadow-lg overflow-hidden">
+            <div class="h-48 w-full bg-slate-200 animate-pulse"></div>
+            <div class="p-5">
+                <div class="h-4 w-1/3 bg-slate-200 rounded animate-pulse mb-4"></div>
+                <div class="h-6 w-3/4 bg-slate-200 rounded animate-pulse"></div>
+            </div>
+        </div>
+    </div>
+</div>
+ 
                 </div>
             </section> 
         </div> 
