--- a/index.html
+++ b/index.html
@@ -47,12 +47,11 @@
     <header class="bg-gradient-to-r from-indigo-600 to-purple-600 text-white shadow-lg sticky top-0 z-40">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
-            <div class="flex items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 mr-3 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
-                </svg>
+                <div class="flex items-center">
+                <img src="logo.png" alt="Recipe Book Logo" class="h-10 mr-3">
                 <h1 class="text-2xl sm:text-3xl font-extrabold tracking-tight">My Personal Recipe Book</h1>
             </div>
+            
                 <div class="flex items-center space-x-4">
                     <div class="relative hidden md:block"> 
                         <label for="headerSearchInput" class="sr-only">Search</label>
