--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <header class="bg-gradient-to-r from-indigo-600 to-purple-600 text-white shadow-lg sticky top-0 z-40">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
-                <div class="flex items-center">
-                <img src="logo.png" alt="Recipe Book Logo" class="h-10 mr-3">
-                <h1 class="text-2xl sm:text-3xl font-extrabold tracking-tight">My Personal Recipe Book</h1>
-            </div>
+        <div class="flex items-center">
+            <img src="https://github.com/HusseinLab/HusseinRecipe/blob/ab8894ad4fe124f4d63f992963d4ac3a59ae8e84/logo.png" alt="Recipe Book Logo" class="h-10 mr-3">
+            <h1 class="text-2xl sm:text-3xl font-extrabold tracking-tight">My Personal Recipe Book</h1>
+        </div>
             
                 <div class="flex items-center space-x-4">
                     <div class="relative hidden md:block"> 
