--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
         <div class="flex items-center">
-            <img src="https://github.com/HusseinLab/HusseinRecipe/blob/ab8894ad4fe124f4d63f992963d4ac3a59ae8e84/logo.png" alt="Recipe Book Logo" class="h-10 mr-3">
+            <img src="https://raw.githubusercontent.com/HusseinLab/HusseinRecipe/main/logo.png" alt="Recipe Book Logo" class="h-10 mr-3">
             <h1 class="text-2xl sm:text-3xl font-extrabold tracking-tight">My Personal Recipe Book</h1>
         </div>
             
