--- a/index.html
+++ b/index.html
@@ -197,6 +197,17 @@
                     </div>
                 </div> 
             </section> 
+                 <!-- Share / Copy‑link button -->
+                <button id="shareBtn"
+                        class="mt-6 inline-flex items-center gap-2 rounded bg-emerald-600 px-4 py-2 text-white hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-400">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="h-5 w-5">
+                    <path d="M15 8a3 3 0 100-6 3 3 0 000 6zM9 22a3 3 0 100-6 3 3 0 000 6zM22 15a3 3 0 10-6 0 3 3 0 006 0z"/>
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                          d="M14.4 6.4L9.6 9.6M14.4 17.6L9.6 14.4"/>
+                  </svg>
+                  Copy link
+                </button>
+
         </div> 
 
         <div id="recipeFormView" class="view-hidden">
