--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <title>My Online Recipe Book</title>
 
     <script> tailwind.config = { darkMode: 'class' }; </script>
+   <!-- 1) Tell Tailwind to use class-based dark mode -->
+    <script>
+      tailwind.config = { darkMode: 'class' };
+    </script>
+    
+    <!-- 2) Load Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css"> <!-- For .view-hidden, .view-active -->
+    
+    <!-- 3) Your custom CSS -->
+    <link rel="stylesheet" href="style.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
         body {
