--- a/index.html
+++ b/index.html
@@ -7,23 +7,28 @@
 
     <script> tailwind.config = { darkMode: 'class' }; </script>
    <!-- 1) Tell Tailwind to use class-based dark mode -->
-    <script>
-      tailwind.config = { darkMode: 'class' };
-    </script>
-    
-    <!-- 2) Load Tailwind -->
+   <script>
+    tailwind.config = { darkMode: 'class' };
+  </script>
     <script src="https://cdn.tailwindcss.com"></script>
-    
-    <!-- 3) Your custom CSS -->
-    <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="style.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f4f7f9; 
+       body {
+        font-family: 'Inter', sans-serif;
+            }
+
+    /* light-mode default */
+          html:not(.dark) body {
+            background-color: #f4f7f9;
             color: #44403c;
-        }
+          }
+
+          html.dark body {
+        background-color: #1f2937;  /* Tailwind gray-800 */
+        color: #f3f4f6;             /* Tailwind gray-100 */
+      }
         .category-filter-btn {
             padding: 0.5rem 1rem;
             font-size: 0.875rem;
