--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <p class="text-sm text-gray-500">&copy; <span id="currentYear"></span> Your Personal Recipe Book</p>
     </footer>
     
-    <script type="module" src="script.js"></script> 
+    <script type="module" src="/src/main.js"></script>
     <script>document.getElementById('currentYear').textContent = new Date().getFullYear();</script>
 </body>
 </html>
