--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>My Online Recipe Book</title>
 
    <script>
-    tailwind.config = { darkMode: 'class' };
-  </script>
+      window.tailwind = window.tailwind || {};
+      window.tailwind.config = { darkMode: 'class' };
+   </script>
+<!-- ── Then load Tailwind’s CDN build ── -->
+    
     <script src="https://cdn.tailwindcss.com"></script>
      <link rel="stylesheet" href="style.css">
 
