--- a/index.html
+++ b/index.html
@@ -286,7 +286,9 @@
     <footer class="text-center mt-12 py-8 border-t border-gray-200">
         <p class="text-sm text-gray-500">&copy; <span id="currentYear"></span> Your Personal Recipe Book</p>
     </footer>
-    
+
+    <!-- fuzzy search library -->
+    <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2/dist/fuse.min.js"></script>
     <script type="module" src="src/main.js"></script>
     <script>document.getElementById('currentYear').textContent = new Date().getFullYear();</script>
 </body>
