--- a/index.html
+++ b/index.html
@@ -248,7 +248,16 @@
                     <div>
                         <label class="block text-sm font-semibold text-gray-700 mb-2">Ingredients <span class="text-red-500">*</span></label>
                         <div class="flex items-center space-x-2 mb-3">
-                            <input type="text" id="newIngredientInput" class="w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition-colors" placeholder="e.g., 1 cup flour">
+                            
+                        <input 
+                            type="text"
+                            id="newIngredientInput"
+                            list="ingredientSuggestions"
+                            class="…"
+                            placeholder="e.g., 1 cup flour"
+                            />
+                        <datalist id="ingredientSuggestions"></datalist>
+                            
                             <button type="button" id="addIngredientBtn" class="px-4 py-2 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 transition-colors whitespace-nowrap">Add</button>
                         </div>
                         <div id="ingredientListDisplay" class="mt-2 space-y-2"></div>
