--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
 
     <!-- fuzzy search library -->
     <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2/dist/fuse.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
     <script type="module" src="src/main.js"></script>
     <script>document.getElementById('currentYear').textContent = new Date().getFullYear();</script>
 </body>
