--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                         <button data-category="Drink" class="category-filter-btn">Drinks</button>
                         <button data-category="Breakfast" class="category-filter-btn">Breakfast</button>
                         <button data-category="Other" class="category-filter-btn">Other</button>
+                        <button data-category="favorites" class="category-filter-btn">❤️ Favourites</button>
                     </div>
                 </div>
 
