--- a/index.html
+++ b/index.html
@@ -6,6 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Online Recipe Book</title>
 
+    <!-- in index.html, inside <head> -->
+        <link
+          href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@600;700&display=swap"
+          rel="stylesheet"
+        />
+        <script>
+            window.tailwind = window.tailwind || {};
+            window.tailwind.config = {
+              theme: {
+                extend: {
+                  fontFamily: {
+                    body: ['Inter', 'sans-serif'],
+                    heading: ['"Playfair Display"', 'serif'],
+                  },
+                  lineHeight: {
+                    relaxed: '1.75',
+                    loose:   '2',
+                  },
+                  letterSpacing: {
+                    wide:   '.025em',
+                    wider:  '.05em',
+                    widest: '.1em',
+                  }
+                }
+              }
+            }
+        </script>
+        <script src="https://cdn.tailwindcss.com"></script>
+
+
    <script>
       window.tailwind = window.tailwind || {};
       window.tailwind.config = { darkMode: 'class' };
@@ -19,7 +49,7 @@
     <link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=">
 </head>
 <body class="min-h-screen flex flex-col bg-gray-50 text-slate-800
-             dark:bg-gray-900 dark:text-gray-100 transition-colors duration-300">
+        dark:bg-gray-900 dark:text-gray-100 transition-colors duration-300 font-body">
 
     <header class="bg-gradient-to-r from-indigo-600 to-purple-600 text-white shadow-lg sticky top-0 z-40">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
@@ -28,7 +58,8 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 mr-3 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
                     </svg>
-                    <h1 class="text-2xl sm:text-3xl font-extrabold tracking-tight">My Personal Recipe Book</h1>
+                    <h1 class="text-2xl sm:text-3xl font-heading font-extrabold tracking-tight">
+                        My Personal Recipe Book</h1>\
                 </div>  
                 <div class="flex items-center space-x-4">
                     <div class="relative hidden md:block"> 
@@ -209,7 +240,8 @@
         <div id="recipeFormView" class="view-hidden">
             <section id="addEditRecipeSection" class="mb-10 bg-white p-6 md:p-8 rounded-xl shadow-xl mt-0 md:mt-8 max-w-2xl mx-auto">
                 <div class="flex justify-between items-center mb-8"> 
-                    <h2 id="formTitle" class="text-2xl md:text-3xl font-bold text-gray-800">Add New Recipe</h2>
+                    <h2 id="formTitle" class="text-2xl md:text-3xl font-heading font-bold text-gray-800">
+                        Add New Recipe</h2>
                 </div>
                 <form id="recipeForm" class="space-y-6">
                     <div>
